--- a/demo-devops/pom.xml
+++ b/demo-devops/pom.xml
@@ -5,17 +5,25 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.5</version>
+		<version>2.6.6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
 	<groupId>com.example</groupId>
 	<artifactId>demo-devops</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>demo-devops</name>
 	<description>Demo project for Spring Boot</description>
+	<url>http://maven.apache.org</url>
+	<packaging>war</packaging>
+
 	<properties>
 		<java.version>1.8</java.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<failOnMissingWebXml>true</failOnMissingWebXml>
 	</properties>
+
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -23,9 +31,10 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>4.2.4.RELEASE</version>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
 
@@ -35,7 +44,33 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<artifactId>maven-war-plugin</artifactId>
+				<extensions>false</extensions>
+				<configuration>
+					<failOnMissingWebXml>false</failOnMissingWebXml>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
+
+<!--	<distributionManagement>-->
+<!--		<snapshotRepository>-->
+<!--			<id>nexus-snapshots</id>-->
+<!--			<url>http://localhost:9081/nexus/content/repositories/snapshots</url>-->
+<!--		</snapshotRepository>-->
+<!--	</distributionManagement>-->
+
+
+	<distributionManagement>
+		<snapshotRepository>
+			<id>mavendeployment</id>
+			<url>http://localhost:9081/nexus/content/repositories/maven-snapshots</url>
+		</snapshotRepository>
+		<repository>
+			<id>mavendeployment</id>
+			<url>http://localhost:9081/nexus/content/repositories/maven-release</url>
+		</repository>
+	</distributionManagement>
 
 </project>
