--- a/demo-devops/pom.xml
+++ b/demo-devops/pom.xml
@@ -61,7 +61,7 @@
 <!--		</snapshotRepository>-->
 <!--	</distributionManagement>-->
 
-
+    <!-- NEXUS -->
 	<distributionManagement>
 		<snapshotRepository>
 			<id>mavendeployment</id>
